update according to comments

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header>
-      <a href="">WebStudio</a>
       <nav>
+        <a href="./index.htm">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -16,8 +16,10 @@
         </ul>
       </nav>
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
       </address>
     </header>
     <main>
@@ -65,7 +67,7 @@
         <ul>
           <li>
             <img
-              src="/images/Mark.jpeg"
+              src="./images/Mark.jpeg"
               width="264"
               height="260"
               alt="Mark Guerrero photo"
@@ -75,7 +77,7 @@
           </li>
           <li>
             <img
-              src="images/Tom.jpeg"
+              src="./images/Tom.jpeg"
               width="264"
               height="260"
               alt="Tom Ford photo"
@@ -85,7 +87,7 @@
           </li>
           <li>
             <img
-              src="images/Camila.jpeg"
+              src="./images/Camila.jpeg"
               width="264"
               height="260"
               alt="Camila Garcia photo"
@@ -95,7 +97,7 @@
           </li>
           <li>
             <img
-              src="images/Daniel.jpeg"
+              src="./images/Daniel.jpeg"
               width="264"
               height="260"
               alt="Daniel Wilson photo"
@@ -107,7 +109,7 @@
       </section>
     </main>
     <footer>
-      <a href="">WebStudio</a>
+      <a href="./index.htm">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
