--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <ul>
           <li>
             <img
-              src="./images/Mark.jpeg"
+              src="./images/Mark.jpg"
               width="264"
               height="260"
               alt="Mark Guerrero photo"
@@ -77,7 +77,7 @@
           </li>
           <li>
             <img
-              src="./images/Tom.jpeg"
+              src="./images/Tom.jpg"
               width="264"
               height="260"
               alt="Tom Ford photo"
@@ -87,7 +87,7 @@
           </li>
           <li>
             <img
-              src="./images/Camila.jpeg"
+              src="./images/Camila.jpg"
               width="264"
               height="260"
               alt="Camila Garcia photo"
@@ -97,7 +97,7 @@
           </li>
           <li>
             <img
-              src="./images/Daniel.jpeg"
+              src="./images/Daniel.jpg"
               width="264"
               height="260"
               alt="Daniel Wilson photo"
