--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </li>
           <li>
             <img
-              src="./images/Tom.jpg"
+              src="images/Tom.jpg"
               width="264"
               height="260"
               alt="Tom Ford photo"
