--- a/index.html
+++ b/index.html
@@ -4,35 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="./css/styles.css" rel="stylesheet" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
+    <header class="header">
+      <nav class="navigation">
+        <a class="link" href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a class="link" href="">Studio</a></li>
+          <li><a class="link" href="">Portfolio</a></li>
+          <li><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="contacts">
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="front-page">
+        <h1 class="page-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="button">Order Service</button>
       </section>
-      <section>
-        <h2>Features</h2>
-        <!-- Will hide the heading in next module -->
+      <section class="features">
+        <h2 class="section-title">Features</h2>
+        <!-- Will hide the heading in the next module -->
         <ul>
           <li>
-            <h3>Strategy</h3>
+            <h3 class="section-heading">Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
@@ -40,21 +45,21 @@
           </li>
 
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="section-heading">Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h3 class="section-heading">Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
+            <h3 class="section-heading">Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -62,54 +67,118 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
+      <section class="team">
+        <h2 class="section-title">Our Team</h2>
         <ul>
           <li>
             <img
-              src="./images/Mark.jpg"
+              src="./images/mark.jpg"
               width="264"
               height="260"
               alt="Mark Guerrero photo"
             />
-            <h3>Mark Guerrero</h3>
+            <h3 class="section-heading">Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img
-              src="images/Tom.jpg"
+              src="./images/tom.jpg"
               width="264"
               height="260"
               alt="Tom Ford photo"
             />
-            <h3>Tom Ford</h3>
+            <h3 class="section-heading">Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="./images/Camila.jpg"
+              src="./images/camila.jpg"
               width="264"
               height="260"
               alt="Camila Garcia photo"
             />
-            <h3>Camila Garcia</h3>
+            <h3 class="section-heading">Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img
-              src="./images/Daniel.jpg"
+              src="./images/daniel.jpg"
               width="264"
               height="260"
               alt="Daniel Wilson photo"
             />
-            <h3>Daniel Wilson</h3>
+            <h3 class="section-heading">Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
+      <section class="portfolio">
+        <h2 class="section-title">Our Portfolio</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/banking-app.jpg"
+              width="360"
+              height="300"
+              alt="Banking App preview"
+            />
+            <h3 class="section-heading">Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/cashless-payment.jpg"
+              width="360"
+              height="300"
+              alt="Cashless Payment preview"
+            />
+            <h3 class="section-heading">Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/meditation-app.jpg"
+              width="360"
+              height="300"
+              alt="Meditation App preview"
+            />
+            <h3 class="section-heading">Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/taxi-service.jpg"
+              width="360"
+              height="300"
+              alt="Taxi Service preview"
+            />
+            <h3 class="section-heading">Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/screen-illustrations.jpg"
+              width="360"
+              height="300"
+              alt="Screen Illustrations preview"
+            />
+            <h3 class="section-heading">Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/online-courses.jpg"
+              width="360"
+              height="300"
+              alt="Online Courses preview"
+            />
+            <h3 class="section-heading">Online Courses</h3>
+            <p>Marketing</p>
+          </li>
+      </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <footer class="footer">
+      <a class="link" href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
