--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <ul>
           <li>
             <img
-              src="./images/mark.jpg"
+              src=""
               width="264"
               height="260"
               alt="Mark Guerrero photo"
@@ -82,7 +82,7 @@
           </li>
           <li>
             <img
-              src="./images/tom.jpg"
+              src=""
               width="264"
               height="260"
               alt="Tom Ford photo"
@@ -92,7 +92,7 @@
           </li>
           <li>
             <img
-              src="./images/camila.jpg"
+              src=""
               width="264"
               height="260"
               alt="Camila Garcia photo"
@@ -102,7 +102,7 @@
           </li>
           <li>
             <img
-              src="./images/daniel.jpg"
+              src=""
               width="264"
               height="260"
               alt="Daniel Wilson photo"
