--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
   <body>
     <header class="header">
       <nav class="navigation">
-        <a class="link" href="./index.html">WebStudio</a>
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-black">Studio</span></a
+        >
         <ul>
-          <li><a class="link" href="">Studio</a></li>
+          <li><a class="link" href="./index.html">Studio</a></li>
           <li><a class="link" href="">Portfolio</a></li>
           <li><a class="link" href="">Contacts</a></li>
         </ul>
@@ -50,7 +52,7 @@
         <ul>
           <li>
             <h3 class="section-heading">Strategy</h3>
-            <p>
+            <p class="feature-description">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
@@ -58,21 +60,21 @@
 
           <li>
             <h3 class="section-heading">Punctuality</h3>
-            <p>
+            <p class="feature-description">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
             <h3 class="section-heading">Diligence</h3>
-            <p>
+            <p class="feature-description">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
             <h3 class="section-heading">Technologies</h3>
-            <p>
+            <p class="feature-description">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -82,7 +84,7 @@
       <section class="team">
         <h2 class="section-title">Our Team</h2>
         <ul>
-          <li>
+          <li class="team-tile">
             <img
               src="./images/mark.jpeg"
               width="264"
@@ -90,9 +92,9 @@
               alt="Mark Guerrero photo"
             />
             <h3 class="section-heading">Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <p class="team-description">Product Designer</p>
           </li>
-          <li>
+          <li class="team-tile">
             <img
               src="./images/tom.jpeg"
               width="264"
@@ -100,9 +102,9 @@
               alt="Tom Ford photo"
             />
             <h3 class="section-heading">Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <p class="team-description">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-tile">
             <img
               src="./images/camila.jpeg"
               width="264"
@@ -110,9 +112,9 @@
               alt="Camila Garcia photo"
             />
             <h3 class="section-heading">Camila Garcia</h3>
-            <p>Marketing</p>
+            <p class="team-description">Marketing</p>
           </li>
-          <li>
+          <li class="team-tile">
             <img
               src="./images/daniel.jpeg"
               width="264"
@@ -120,7 +122,7 @@
               alt="Daniel Wilson photo"
             />
             <h3 class="section-heading">Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <p class="team-description">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -135,7 +137,7 @@
               alt="Banking App preview"
             />
             <h3 class="section-heading">Banking App</h3>
-            <p>App</p>
+            <p class="portfolio-description">App</p>
           </li>
           <li>
             <img
@@ -145,7 +147,7 @@
               alt="Cashless Payment preview"
             />
             <h3 class="section-heading">Cashless Payment</h3>
-            <p>Marketing</p>
+            <p class="portfolio-description">Marketing</p>
           </li>
           <li>
             <img
@@ -155,7 +157,7 @@
               alt="Meditation App preview"
             />
             <h3 class="section-heading">Meditation App</h3>
-            <p>App</p>
+            <p class="portfolio-description">App</p>
           </li>
           <li>
             <img
@@ -165,7 +167,7 @@
               alt="Taxi Service preview"
             />
             <h3 class="section-heading">Taxi Service</h3>
-            <p>Marketing</p>
+            <p class="portfolio-description">Marketing</p>
           </li>
           <li>
             <img
@@ -175,7 +177,7 @@
               alt="Screen Illustrations preview"
             />
             <h3 class="section-heading">Screen Illustrations</h3>
-            <p>Design</p>
+            <p class="portfolio-description">Design</p>
           </li>
           <li>
             <img
@@ -185,14 +187,16 @@
               alt="Online Courses preview"
             />
             <h3 class="section-heading">Online Courses</h3>
-            <p>Marketing</p>
+            <p class="portfolio-description">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <a class="link" href="./index.html">WebStudio</a>
-      <p>
+      <a class="logo" href="./index.html"
+        >Web<span class="logo-white">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
