add comments to divide sections

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
     <link
       rel="stylesheet"
       href="node_modules/modern-normalize/modern-normalize.css"
@@ -17,6 +17,7 @@
     <link href="./css/styles.css" rel="stylesheet" />
   </head>
   <body>
+    <!-- #region Header -->
     <header class="header">
       <nav class="navigation">
         <a class="logo" href="./index.html"
@@ -41,17 +42,20 @@
         </ul>
       </address>
     </header>
+    <!-- #endregion /Header -->
     <main>
+      <!-- #region Hero -->
       <section class="front-page">
         <h1 class="page-title">Effective Solutions for Your Business</h1>
         <button type="button" class="button">Order Service</button>
       </section>
+      <!-- #endregion /Hero -->
+      <!-- #region Features -->
       <section class="features">
         <h2 class="section-title">Features</h2>
-        <!-- Will hide the heading in the next module -->
         <ul>
           <li>
-            <h3 class="section-heading">Strategy</h3>
+            <h3 hidden class="section-heading">Strategy</h3>
             <p class="feature-description">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
@@ -81,6 +85,8 @@
           </li>
         </ul>
       </section>
+      <!-- #endregion /Features -->
+      <!-- #region Team -->
       <section class="team">
         <h2 class="section-title">Our Team</h2>
         <ul>
@@ -126,6 +132,8 @@
           </li>
         </ul>
       </section>
+      <!-- #endregion /Team -->
+      <!-- #region Portfolio -->
       <section class="portfolio">
         <h2 class="section-title">Our Portfolio</h2>
         <ul>
@@ -191,6 +199,7 @@
           </li>
         </ul>
       </section>
+      <!-- #endregion Portfolio -->
     </main>
     <footer class="footer">
       <a class="logo" href="./index.html"
