--- a/index.html
+++ b/index.html
@@ -6,38 +6,49 @@
     <title>WebStudio</title>
     <link
       rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
     <link href="./css/styles.css" rel="stylesheet" />
   </head>
   <body>
     <!-- #region Header -->
-    <header class="header">
-      <nav class="navigation">
+    <header id="home" class="header">
+      <nav class="header-nav">
         <a class="logo" href="./index.html"
           >Web<span class="logo-black">Studio</span></a
         >
-        <ul>
-          <li><a class="link" href="./index.html">Studio</a></li>
-          <li><a class="link" href="">Portfolio</a></li>
-          <li><a class="link" href="">Contacts</a></li>
+        <ul class="header-nav-list">
+          <li class="header-nav-item">
+            <a class="header-nav-link" href="#home">Studio</a>
+          </li>
+          <li class="header-nav-item">
+            <a class="header-nav-link" href="#portfolio">Portfolio</a>
+          </li>
+          <li class="header-nav-item">
+            <a class="header-nav-link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <address class="contacts">
-        <ul>
-          <li>
-            <a class="link" href="mailto:info@devstudio.com"
+      <address class="header-contacts">
+        <ul class="header-contact-list">
+          <li class="header-contact-item">
+            <a class="header-contacts-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li>
-            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="header-contact-item">
+            <a class="header-contacts-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -45,40 +56,40 @@
     <!-- #endregion /Header -->
     <main>
       <!-- #region Hero -->
-      <section class="front-page">
-        <h1 class="page-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="order-button">Order Service</button>
       </section>
       <!-- #endregion /Hero -->
       <!-- #region Features -->
       <section class="features">
-        <h2 class="section-title">Features</h2>
-        <ul>
-          <li>
-            <h3 hidden class="section-heading">Strategy</h3>
-            <p class="feature-description">
+        <h2 class="feature-title visually-hidden section-title">Features</h2>
+        <ul class="feature-list">
+          <li class="feature-item">
+            <h3 class="feature-heading section-heading">Strategy</h3>
+            <p class="feature-description description">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
 
-          <li>
-            <h3 class="section-heading">Punctuality</h3>
-            <p class="feature-description">
+          <li class="feature-item">
+            <h3 class="feature-heading section-heading">Punctuality</h3>
+            <p class="feature-description description">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3 class="section-heading">Diligence</h3>
-            <p class="feature-description">
+          <li class="feature-item">
+            <h3 class="feature-heading section-heading">Diligence</h3>
+            <p class="feature-description description">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3 class="section-heading">Technologies</h3>
-            <p class="feature-description">
+          <li class="feature-item">
+            <h3 class="feature-heading section-heading">Technologies</h3>
+            <p class="feature-description description">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -88,127 +99,133 @@
       <!-- #endregion /Features -->
       <!-- #region Team -->
       <section class="team">
-        <h2 class="section-title">Our Team</h2>
-        <ul>
-          <li class="team-tile">
+        <h2 class="team-title section-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-item">
             <img
+              class="team-pic"
               src="./images/mark.jpeg"
               width="264"
               height="260"
               alt="Mark Guerrero photo"
             />
-            <h3 class="section-heading">Mark Guerrero</h3>
-            <p class="team-description">Product Designer</p>
+            <h3 class="team-name section-heading">Mark Guerrero</h3>
+            <p class="team-description description">Product Designer</p>
           </li>
-          <li class="team-tile">
+          <li class="team-item">
             <img
+              class="team-pic"
               src="./images/tom.jpeg"
               width="264"
               height="260"
               alt="Tom Ford photo"
             />
-            <h3 class="section-heading">Tom Ford</h3>
-            <p class="team-description">Frontend Developer</p>
+            <h3 class="team-name section-heading">Tom Ford</h3>
+            <p class="team-description description">Frontend Developer</p>
           </li>
-          <li class="team-tile">
+          <li class="team-item">
             <img
+              class="team-pic"
               src="./images/camila.jpeg"
               width="264"
               height="260"
               alt="Camila Garcia photo"
             />
-            <h3 class="section-heading">Camila Garcia</h3>
-            <p class="team-description">Marketing</p>
+            <h3 class="team-name section-heading">Camila Garcia</h3>
+            <p class="team-description description">Marketing</p>
           </li>
-          <li class="team-tile">
+          <li class="team-item">
             <img
+              class="team-pic"
               src="./images/daniel.jpeg"
               width="264"
               height="260"
               alt="Daniel Wilson photo"
             />
-            <h3 class="section-heading">Daniel Wilson</h3>
-            <p class="team-description">UI Designer</p>
+            <h3 class="team-name section-heading">Daniel Wilson</h3>
+            <p class="team-description description">UI Designer</p>
           </li>
         </ul>
       </section>
       <!-- #endregion /Team -->
       <!-- #region Portfolio -->
-      <section class="portfolio">
-        <h2 class="section-title">Our Portfolio</h2>
-        <ul>
-          <li>
+      <section id="portfolio" class="portfolio">
+        <h2 class="portfolio-title section-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li class="portfolio-item">
             <img
               src="./images/banking-app.jpg"
               width="360"
               height="300"
               alt="Banking App preview"
             />
-            <h3 class="section-heading">Banking App</h3>
-            <p class="portfolio-description">App</p>
+            <h3 class="portfolio-name section-heading">Banking App</h3>
+            <p class="portfolio-description description">App</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/cashless-payment.jpg"
               width="360"
               height="300"
               alt="Cashless Payment preview"
             />
-            <h3 class="section-heading">Cashless Payment</h3>
-            <p class="portfolio-description">Marketing</p>
+            <h3 class="portfolio-name section-heading">Cashless Payment</h3>
+            <p class="portfolio-description description">Marketing</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/meditation-app.jpg"
               width="360"
               height="300"
               alt="Meditation App preview"
             />
-            <h3 class="section-heading">Meditation App</h3>
-            <p class="portfolio-description">App</p>
+            <h3 class="portfolio-name section-heading">Meditation App</h3>
+            <p class="portfolio-description description">App</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/taxi-service.jpg"
               width="360"
               height="300"
               alt="Taxi Service preview"
             />
-            <h3 class="section-heading">Taxi Service</h3>
-            <p class="portfolio-description">Marketing</p>
+            <h3 class="portfolio-name section-heading">Taxi Service</h3>
+            <p class="portfolio-description description">Marketing</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/screen-illustrations.jpg"
               width="360"
               height="300"
               alt="Screen Illustrations preview"
             />
-            <h3 class="section-heading">Screen Illustrations</h3>
-            <p class="portfolio-description">Design</p>
+            <h3 class="portfolio-name section-heading">Screen Illustrations</h3>
+            <p class="portfolio-description description">Design</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/online-courses.jpg"
               width="360"
               height="300"
               alt="Online Courses preview"
             />
-            <h3 class="section-heading">Online Courses</h3>
-            <p class="portfolio-description">Marketing</p>
+            <h3 class="portfolio-name section-heading">Online Courses</h3>
+            <p class="portfolio-description description">Marketing</p>
           </li>
         </ul>
       </section>
       <!-- #endregion Portfolio -->
     </main>
+    <!-- #region Footer -->
     <footer class="footer">
       <a class="logo" href="./index.html"
         >Web<span class="logo-white">Studio</span></a
       >
-      <p class="footer-text">
+      <p class="footer-text description">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
+    <!-- #endregion /Footer -->
   </body>
 </html>
