--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         >
         <ul class="header-nav-list">
           <li class="header-nav-item">
-            <a class="header-nav-link" href="#home">Studio</a>
+            <a class="header-nav-link" href="./index.html">Studio</a>
           </li>
           <li class="header-nav-item">
-            <a class="header-nav-link" href="#portfolio">Portfolio</a>
+            <a class="header-nav-link" href="">Portfolio</a>
           </li>
           <li class="header-nav-item">
             <a class="header-nav-link" href="">Contacts</a>
@@ -63,7 +63,9 @@
       <!-- #endregion /Hero -->
       <!-- #region Features -->
       <section class="features">
-        <h2 class="feature-title visually-hidden section-title">Features</h2>
+        <h2 hidden class="feature-title visually-hidden section-title">
+          Features
+        </h2>
         <ul class="feature-list">
           <li class="feature-item">
             <h3 class="feature-heading section-heading">Strategy</h3>
