--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
       <!-- #endregion /Hero -->
       <!-- #region Features -->
       <section class="features">
-        <h2 class="feature-title visually-hidden section-title">Features</h2>
         <div class="container features-container">
+          <h2 class="feature-title visually-hidden section-title">Features</h2>
           <ul class="feature-list">
             <li class="feature-item">
               <h3 class="feature-heading section-heading">Strategy</h3>
@@ -115,8 +115,10 @@
                 height="260"
                 alt="Mark Guerrero photo"
               />
-              <h3 class="team-name section-heading">Mark Guerrero</h3>
-              <p class="team-description description">Product Designer</p>
+              <div class="team-text">
+                <h3 class="team-name section-heading">Mark Guerrero</h3>
+                <p class="team-description description">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -126,8 +128,10 @@
                 height="260"
                 alt="Tom Ford photo"
               />
-              <h3 class="team-name section-heading">Tom Ford</h3>
-              <p class="team-description description">Frontend Developer</p>
+              <div class="team-text">
+                <h3 class="team-name section-heading">Tom Ford</h3>
+                <p class="team-description description">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -137,8 +141,10 @@
                 height="260"
                 alt="Camila Garcia photo"
               />
-              <h3 class="team-name section-heading">Camila Garcia</h3>
-              <p class="team-description description">Marketing</p>
+              <div class="team-text">
+                <h3 class="team-name section-heading">Camila Garcia</h3>
+                <p class="team-description description">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -148,8 +154,10 @@
                 height="260"
                 alt="Daniel Wilson photo"
               />
-              <h3 class="team-name section-heading">Daniel Wilson</h3>
-              <p class="team-description description">UI Designer</p>
+              <div class="team-text">
+                <h3 class="team-name section-heading">Daniel Wilson</h3>
+                <p class="team-description description">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -167,8 +175,10 @@
                 height="300"
                 alt="Banking App preview"
               />
-              <h3 class="portfolio-name section-heading">Banking App</h3>
-              <p class="portfolio-description description">App</p>
+              <div class="portfolio-card-content">
+                <h3 class="portfolio-name section-heading">Banking App</h3>
+                <p class="portfolio-description description">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -177,8 +187,10 @@
                 height="300"
                 alt="Cashless Payment preview"
               />
-              <h3 class="portfolio-name section-heading">Cashless Payment</h3>
-              <p class="portfolio-description description">Marketing</p>
+              <div class="portfolio-card-content">
+                <h3 class="portfolio-name section-heading">Cashless Payment</h3>
+                <p class="portfolio-description description">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -187,8 +199,10 @@
                 height="300"
                 alt="Meditation App preview"
               />
-              <h3 class="portfolio-name section-heading">Meditation App</h3>
-              <p class="portfolio-description description">App</p>
+              <div class="portfolio-card-content">
+                <h3 class="portfolio-name section-heading">Meditation App</h3>
+                <p class="portfolio-description description">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -197,8 +211,10 @@
                 height="300"
                 alt="Taxi Service preview"
               />
-              <h3 class="portfolio-name section-heading">Taxi Service</h3>
-              <p class="portfolio-description description">Marketing</p>
+              <div class="portfolio-card-content">
+                <h3 class="portfolio-name section-heading">Taxi Service</h3>
+                <p class="portfolio-description description">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -207,10 +223,12 @@
                 height="300"
                 alt="Screen Illustrations preview"
               />
-              <h3 class="portfolio-name section-heading">
-                Screen Illustrations
-              </h3>
-              <p class="portfolio-description description">Design</p>
+              <div class="portfolio-card-content">
+                <h3 class="portfolio-name section-heading">
+                  Screen Illustrations
+                </h3>
+                <p class="portfolio-description description">Design</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -219,8 +237,10 @@
                 height="300"
                 alt="Online Courses preview"
               />
-              <h3 class="portfolio-name section-heading">Online Courses</h3>
-              <p class="portfolio-description description">Marketing</p>
+              <div class="portfolio-card-content">
+                <h3 class="portfolio-name section-heading">Online Courses</h3>
+                <p class="portfolio-description description">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
