--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           >
           <ul class="header-nav-list">
             <li class="header-nav-item">
-              <a class="header-nav-link" href="./index.html">Studio</a>
+              <a class="header-nav-link current" href="./index.html">Studio</a>
             </li>
             <li class="header-nav-item">
               <a class="header-nav-link" href="">Portfolio</a>
@@ -71,6 +71,9 @@
           <h2 class="feature-title visually-hidden section-title">Features</h2>
           <ul class="feature-list">
             <li class="feature-item">
+              <div class="icon-box">
+                <svg class="icon" width="64" height="64"><use href="./images/icons.svg#icon-antenna"></svg>
+              </div>
               <h3 class="feature-heading section-heading">Strategy</h3>
               <p class="feature-description description">
                 Our goal is to identify the business problem to walk away with
@@ -78,6 +81,9 @@
               </p>
             </li>
             <li class="feature-item">
+              <div class="icon-box">
+                <svg class="icon" width="64" height="64"><use href="./images/icons.svg#icon-clock"></svg>
+              </div>
               <h3 class="feature-heading section-heading">Punctuality</h3>
               <p class="feature-description description">
                 Bring the key message to the brand's audience for the best price
@@ -85,6 +91,9 @@
               </p>
             </li>
             <li class="feature-item">
+              <div class="icon-box">
+                <svg class="icon" width="64" height="64"><use href="./images/icons.svg#icon-diagram"></svg>
+              </div>
               <h3 class="feature-heading section-heading">Diligence</h3>
               <p class="feature-description description">
                 Research and confirm brands that present the strongest digital
@@ -92,6 +101,9 @@
               </p>
             </li>
             <li class="feature-item">
+              <div class="icon-box">
+                <svg class="icon" width="64" height="64"><use href="./images/icons.svg#icon-astronaut"></svg>
+              </div>
               <h3 class="feature-heading section-heading">Technologies</h3>
               <p class="feature-description description">
                 Design practice focused on digital experiences. We bring forth a
