--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
           <ul class="feature-list">
             <li class="feature-item">
               <div class="icon-box">
-                <svg class="icon" width="64" height="64"><use href="./images/icons.svg#icon-antenna"></svg>
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna" />
+                </svg>
               </div>
               <h3 class="feature-heading section-heading">Strategy</h3>
               <p class="feature-description description">
@@ -82,7 +84,9 @@
             </li>
             <li class="feature-item">
               <div class="icon-box">
-                <svg class="icon" width="64" height="64"><use href="./images/icons.svg#icon-clock"></svg>
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock" />
+                </svg>
               </div>
               <h3 class="feature-heading section-heading">Punctuality</h3>
               <p class="feature-description description">
@@ -92,7 +96,9 @@
             </li>
             <li class="feature-item">
               <div class="icon-box">
-                <svg class="icon" width="64" height="64"><use href="./images/icons.svg#icon-diagram"></svg>
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram" />
+                </svg>
               </div>
               <h3 class="feature-heading section-heading">Diligence</h3>
               <p class="feature-description description">
@@ -102,7 +108,9 @@
             </li>
             <li class="feature-item">
               <div class="icon-box">
-                <svg class="icon" width="64" height="64"><use href="./images/icons.svg#icon-astronaut"></svg>
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut" />
+                </svg>
               </div>
               <h3 class="feature-heading section-heading">Technologies</h3>
               <p class="feature-description description">
