--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
           >
           <ul class="header-nav-list">
             <li class="header-nav-item">
-              <a class="header-nav-link current" href="./index.html">Studio</a>
+              <a
+                class="header-nav-link current header-nav-link-studio"
+                href="./index.html"
+                >Studio</a
+              >
             </li>
             <li class="header-nav-item">
               <a class="header-nav-link" href="">Portfolio</a>
