--- a/index.html
+++ b/index.html
@@ -598,8 +598,109 @@
             </li>
           </ul>
         </div>
+        <div class="subscription-form-wrap">
+          <form class="subscription-form">
+            <label class="subscription-label" for="user_email">Subscribe</label>
+            <div class="input-button-wrap">
+              <input
+                class="subscription-input"
+                type="email"
+                id="user_email"
+                name="email"
+                placeholder="E-mail"
+                required
+              />
+              <button class="subscribe-button button" type="submit">
+                <p class="subscribe-btn-text">Subscribe</p>
+                <svg class="subscribe-btn-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-paper-plane"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
     <!-- #endregion /Footer -->
+    <!-- #region Modal -->
+    <div class="modal-overlay">
+      <div class="modal">
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+
+        <form class="modal-form">
+          <div class="modal-element">
+            <label for="name" class="modal-input-label">Name</label>
+            <div class="modal-input-box">
+              <input
+                type="text"
+                class="modal-input-text"
+                id="name"
+                name="name"
+                required
+              />
+              <svg class="modal-input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-element">
+            <label for="phone" class="modal-input-label">Phone</label>
+            <div class="modal-input-box">
+              <input
+                type="tel"
+                class="modal-input-text"
+                id="phone"
+                name="phone"
+                required
+              />
+              <svg class="modal-input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-element">
+            <label for="email" class="modal-input-label">Email</label>
+            <div class="modal-input-box">
+              <input
+                type="email"
+                class="modal-input-text"
+                id="email"
+                name="email"
+                required
+              />
+              <svg class="modal-input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-textarea">
+            <label for="comment" class="modal-textarea-label">Comment</label>
+            <textarea name="comment" id="comment" class="modal-form-comment">
+            </textarea>
+          </div>
+
+          <div class="modal-checkbox-area">
+            <input
+              class="modal-checkbox-input"
+              type="checkbox"
+              name="privacy_policy"
+              value="privacy_policy"
+              required
+            />
+            <label class="modal-checkbox-label">
+              <span class="modal-checkmark-icon"></span>
+              I accept the terms and conditions of the
+              <a href="#" class="checkbox-pp-link">Privacy Policy</a>
+            </label>
+          </div>
+
+          <button class="modal-send-button" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
+    <!-- #endregion /Modal -->
   </body>
 </html>
