finish overlay and modal

--- a/index.html
+++ b/index.html
@@ -625,6 +625,11 @@
     <!-- #region Modal -->
     <div class="modal-overlay">
       <div class="modal">
+        <button class="modal-close-button" type="button">
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
         <p class="modal-text">Leave your contacts and we will call you back</p>
 
         <form class="modal-form">
@@ -678,25 +683,34 @@
 
           <div class="modal-textarea">
             <label for="comment" class="modal-textarea-label">Comment</label>
-            <textarea name="comment" id="comment" class="modal-form-comment">
+            <textarea
+              name="comment"
+              id="comment"
+              class="modal-form-comment"
+              placeholder="Text input"
+            >
             </textarea>
           </div>
 
           <div class="modal-checkbox-area">
             <input
-              class="modal-checkbox-input"
+              class="modal-checkbox-input visually-hidden"
               type="checkbox"
-              name="privacy_policy"
-              value="privacy_policy"
+              name="privacy"
+              value="privacy"
+              id="privacy"
               required
             />
-            <label class="modal-checkbox-label">
-              <span class="modal-checkmark-icon"></span>
+            <label class="modal-checkbox-label" for="privacy">
+              <span class="modal-checkmark-icon">
+                <svg class="checkmark-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check-mark"></use>
+                </svg>
+              </span>
               I accept the terms and conditions of the
               <a href="#" class="checkbox-pp-link">Privacy Policy</a>
             </label>
           </div>
-
           <button class="modal-send-button" type="submit">Send</button>
         </form>
       </div>
