--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
     </footer>
     <!-- #endregion /Footer -->
     <!-- #region Modal -->
-    <div class="modal-overlay">
+    <div class="modal-overlay is-open">
       <div class="modal">
         <button class="modal-close-button" type="button">
           <svg class="modal-close-icon" width="8" height="8">
