--- a/index.html
+++ b/index.html
@@ -599,8 +599,9 @@
           </ul>
         </div>
         <div class="subscription-form-wrap">
+          <p class="subscribe-heading">Subscribe</p>
           <form class="subscription-form">
-            <label class="subscription-label" for="user_email">Subscribe</label>
+            <label class="subscription-label" for="user_email"></label>
             <div class="input-button-wrap">
               <input
                 class="subscription-input"
@@ -611,7 +612,7 @@
                 required
               />
               <button class="subscribe-button button" type="submit">
-                <p class="subscribe-btn-text">Subscribe</p>
+                Subscribe
                 <svg class="subscribe-btn-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-paper-plane"></use>
                 </svg>
@@ -634,16 +635,16 @@
 
         <form class="modal-form">
           <div class="modal-element">
-            <label for="name" class="modal-input-label">Name</label>
+            <label for="user-name" class="modal-input-label">Name</label>
             <div class="modal-input-box">
               <input
                 type="text"
                 class="modal-input-text"
-                id="name"
-                name="name"
+                id="user-name"
+                name="user-name"
                 required
               />
-              <svg class="modal-input-icon" width="18" height="18">
+              <svg class="modal-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
@@ -682,10 +683,10 @@
           </div>
 
           <div class="modal-textarea">
-            <label for="comment" class="modal-textarea-label">Comment</label>
+            <label for="user-comment" class="modal-input-label">Comment</label>
             <textarea
-              name="comment"
-              id="comment"
+              name="user-comment"
+              id="user-comment"
               class="modal-form-comment"
               placeholder="Text input"
             >
@@ -696,12 +697,12 @@
             <input
               class="modal-checkbox-input visually-hidden"
               type="checkbox"
-              name="privacy"
-              value="privacy"
-              id="privacy"
+              name="user-privacy"
+              value="true"
+              id="user-privacy"
               required
             />
-            <label class="modal-checkbox-label" for="privacy">
+            <label class="modal-checkbox-label" for="user-privacy">
               <span class="modal-checkmark-icon">
                 <svg class="checkmark-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-check-mark"></use>
