--- a/index.html
+++ b/index.html
@@ -601,8 +601,7 @@
         <div class="subscription-form-wrap">
           <p class="subscribe-heading">Subscribe</p>
           <form class="subscription-form">
-            <label class="subscription-label" for="user_email"></label>
-            <div class="input-button-wrap">
+            <label class="subscription-label" for="user_email">
               <input
                 class="subscription-input"
                 type="email"
@@ -611,13 +610,13 @@
                 placeholder="E-mail"
                 required
               />
-              <button class="subscribe-button button" type="submit">
-                Subscribe
-                <svg class="subscribe-btn-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-paper-plane"></use>
-                </svg>
-              </button>
-            </div>
+            </label>
+            <button class="subscribe-button button" type="submit">
+              Subscribe
+              <svg class="subscribe-btn-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-paper-plane"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
